Initial Activity Implementation.
* IF no activity is currently present, user starts from 0 with
  14 remaining activity for the 2 week period

* User caps out at 14 activity in a 2 week period

* Activity is retrieved in a hook when thread posts are retrieved

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "bitcointalk",
     "activity"
   ],
-  "author": "Anthony Kinsey <anthonyjk@gmail.com> (http://github.com/akinsey)",
-  "license": "ISC"
+  "author": "Anthony Kinsey",
+  "license": "ISC",
+  "dependencies": {
+    "bluebird": "^3.3.1",
+    "epochtalk-core-pg": "epochtalk/core-pg"
+  }
 }
