--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "license": "ISC",
   "devDependencies": {
     "bluebird": "^3.3.1",
-    "epochtalk-core-pg": "epochtalk/core-pg"
+    "epochtalk-core-pg": "epochtalk/core-pg#update/node-pg"
   }
 }
